# memory-watcher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test_on_ubuntu_20_04.yml
chart/: CMakeLists.txt  Chart.cpp  Chart.h
docker/: build-images.sh  build.sh
docker/ubuntu2004/: Dockerfile  build.sh
docker/ubuntu2104/: Dockerfile  build.sh
load/: CMakeLists.txt  Feeder.cpp  Feeder.h  Load.cpp  Load.h  MemoryLoader.cpp  MemoryLoader.h
peak/: CMakeLists.txt  Peak.cpp  Peak.h
record/: CMakeLists.txt  Feeder.cpp  Feeder.h  MemoryWatcher.cpp  MemoryWatcher.h  ProcessMemoryWatcher.cpp  ProcessMemoryWatcher.h  Record.cpp  Record.h  SmapsWatcher.cpp  SmapsWatcher.h  SystemMemoryWatcher.cpp  SystemMemoryWatcher.h
replay/: CMakeLists.txt  Replay.cpp  Replay.h
unittest/: CMakeLists.txt  testmain.cpp
utils/: CMakeLists.txt  CmdLineParsing.cpp  CmdLineParsing.h  MemInfo.h  OomScore.h  ProcessId.cpp  ProcessId.h  QVariantConverters.h  SmapsRange.cpp  SmapsRange.h  StatM.h  Storage.cpp  Storage.h  String.cpp  String.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h  Version.h.cmake
watcher/: CMakeLists.txt  Feeder.cpp  Feeder.h  SmapsWatcher.cpp  SmapsWatcher.h  Watcher.cpp  Watcher.h
